--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "7dars_react",
+  "name": "6oy-7-dars",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "create": "^0.0.2",
     "firebase": "^10.12.2",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
